# slack-rs-api

./: .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
codegen/: Cargo.toml
codegen/src/: adapt.rs  adapt_gen.rs  generator.rs  json_schema.rs  lib.rs  main.rs  rust.rs  schema.rs  vec_or_single.rs
codegen/src/adapt/: api.rs  auth.rs  bots.rs  chat.rs  conversations.rs  dialog.rs  dnd.rs  migration.rs  mod.rs  reactions.rs  reminders.rs  rtm.rs  search.rs  stars.rs  utils.rs  views.rs  workflows.rs
codegen/src/adapt/admin/: emoji.rs  mod.rs  usergroups.rs
codegen/src/adapt/admin/apps/: mod.rs
codegen/src/adapt/admin/conversations/: ekm.rs  mod.rs  restrict_access.rs
codegen/src/adapt/admin/invite_requests/: mod.rs
codegen/src/adapt/admin/teams/: mod.rs  settings.rs
codegen/src/adapt/admin/users/: mod.rs  session.rs
codegen/src/adapt/apps/: mod.rs
codegen/src/adapt/apps/event/: mod.rs
codegen/src/adapt/apps/permissions/: mod.rs  users.rs
codegen/src/adapt/calls/: mod.rs  participants.rs
codegen/src/adapt/chat/: mod.rs  scheduled_messages.rs
codegen/src/adapt/files/: comments.rs  mod.rs  remote.rs
codegen/src/adapt/oauth/: mod.rs  v_2.rs
codegen/src/adapt/team/: mod.rs  profile.rs
codegen/src/adapt/usergroups/: mod.rs  users.rs
codegen/src/adapt/users/: mod.rs  profile.rs
examples/: channel_history.rs  channel_history_sync.rs  get_users.rs  start_rtm.rs
src/: api.rs  auth.rs  channels.rs  chat.rs  emoji.rs  error.rs  events.rs  files.rs  groups.rs  im.rs  lib.rs  message_events.rs  oauth.rs  pins.rs  reactions.rs  reminders.rs  requests.rs  rtm.rs  search.rs  stars.rs  team.rs  timestamp.rs  types.rs  users.rs
src/async_impl/: mod.rs  requests.rs
src/async_impl/mods/: api.rs  auth.rs  bots.rs  channels.rs  chat.rs  conversations.rs  dialog.rs  dnd.rs  emoji.rs  files.rs  files_comments.rs  groups.rs  im.rs  migration.rs  mod.rs  mpim.rs  oauth.rs  pins.rs  reactions.rs  reminders.rs  rtm.rs  search.rs  stars.rs  team.rs  team_profile.rs  usergroups.rs  usergroups_users.rs  users.rs  users_profile.rs  views.rs  workflows.rs
src/async_impl/mods/admin/: emoji.rs  mod.rs  usergroups.rs
src/async_impl/mods/apps/: mod.rs
src/async_impl/mods/calls/: mod.rs  participants.rs
src/async_impl/mods/chat/: mod.rs  scheduled_messages.rs
src/async_impl/mods/files/: comments.rs  mod.rs  remote.rs
src/async_impl/mods/oauth/: mod.rs  v_2.rs
src/async_impl/mods/team/: mod.rs  profile.rs
src/async_impl/mods/usergroups/: mod.rs  users.rs
src/async_impl/mods/users/: mod.rs  profile.rs
src/mod_types/: api_types.rs  auth_types.rs  bots_types.rs  channels_types.rs  chat_types.rs  conversations_types.rs  dialog_types.rs  dnd_types.rs  emoji_types.rs  files_comments_types.rs  files_types.rs  groups_types.rs  im_types.rs  migration_types.rs  mod.rs  mpim_types.rs  oauth_types.rs  pins_types.rs  reactions_types.rs  reminders_types.rs  rtm_types.rs  search_types.rs  stars_types.rs  team_profile_types.rs  team_types.rs  usergroups_types.rs  usergroups_users_types.rs  users_profile_types.rs  users_types.rs  views_types.rs  workflows_types.rs
src/mod_types/admin/: emoji_types.rs  mod.rs  usergroups_types.rs
src/mod_types/admin/apps/: approved_types.rs  mod.rs  requests_types.rs  restricted_types.rs
src/mod_types/admin/conversations/: ekm_types.rs  mod.rs  restrict_access_types.rs
src/mod_types/admin/invite_requests/: approved_types.rs  denied_types.rs  mod.rs
src/mod_types/admin/teams/: admins_types.rs  mod.rs  owners_types.rs  settings_types.rs
src/mod_types/admin/users/: mod.rs  session_types.rs
src/mod_types/apps/: mod.rs
src/mod_types/apps/event/: authorizations_types.rs  mod.rs
src/mod_types/apps/permissions/: mod.rs  resources_types.rs  scopes_types.rs  (+1 more)
src/mod_types/calls/: mod.rs  participants_types.rs
src/mod_types/chat/: mod.rs  scheduled_messages_types.rs
src/mod_types/files/: comments_types.rs  mod.rs  remote_types.rs
src/mod_types/oauth/: mod.rs  v_2_types.rs
src/mod_types/team/: mod.rs  profile_types.rs
src/mod_types/usergroups/: mod.rs  users_types.rs
src/mod_types/users/: mod.rs  profile_types.rs
src/mods/: api.rs  auth.rs  bots.rs  channels.rs  chat.rs  dnd.rs  emoji.rs  files.rs  files_comments.rs  groups.rs  im.rs  mod.rs  mpim.rs  oauth.rs  pins.rs  reactions.rs  reminders.rs  rtm.rs  search.rs  stars.rs  team.rs  team_profile.rs  usergroups.rs  usergroups_users.rs  users.rs  users_profile.rs
src/sync/: mod.rs  requests.rs
src/sync/mods/: api.rs  auth.rs  bots.rs  channels.rs  chat.rs  conversations.rs  dialog.rs  dnd.rs  emoji.rs  files.rs  files_comments.rs  groups.rs  im.rs  migration.rs  mod.rs  mpim.rs  oauth.rs  pins.rs  reactions.rs  reminders.rs  rtm.rs  search.rs  stars.rs  team.rs  team_profile.rs  usergroups.rs  usergroups_users.rs  users.rs  users_profile.rs  views.rs  workflows.rs
tests/: smoke_test.rs
(+63 files in other folders)
