[package]
authors = ["Benjamin Elder <ben.the.elder@gmail.com>", "Matt Jones <mthjones@gmail.com>"]
description = "Interface for the Slack Web API"
documentation = "https://docs.rs/slack_api"
license = "Apache-2.0"
name = "slack_api"
repository = "https://github.com/slack-rs/slack-rs-api.git"
version = "0.22.0"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.reqwest_]
package = "reqwest"
version = "0.10"
optional = true
default-features = false
features = ["gzip"]

[dependencies.async-trait]
package = "async-trait"
version = "0.1"
optional = true

[features]
default = ["reqwest", "with_native_tls"]
reqwest = ["reqwest_", "async-trait"]
with_rustls = ["reqwest_/rustls-tls"]
with_native_tls = ["reqwest_/native-tls"]
