[package]
authors = ["Matt Jones <mthjones@gmail.com>"]
description = "Code generator for the Slack Web API"
documentation = "http://slack-rs.github.io/slack-rs-api/slack_api/"
license = "Apache-2.0"
name = "slack_api_codegen"
repository = "https://github.com/slack-rs/slack-rs-api"
version = "0.1.0"
edition = "2018"

[dependencies]
Inflector = "~0.11.0"
clap = "~2.32.0"
rustfmt = "=0.10.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
serde_json = "~1.0.0"
